--- a/.github/workflows/deploy-Code-TF.yml
+++ b/.github/workflows/deploy-Code-TF.yml
@@ -8,10 +8,12 @@ on:
   workflow_run:
     workflows:
       - Deploy-IaC-TF
+      - PR-Deploy-IaC-TF
     types:
       - completed
     branches:
     - master
+    - poc-test-backendtf
     paths:
       - "myApp/**"
 
