--- a/.github/workflows/deploy-IaC-TF.yml
+++ b/.github/workflows/deploy-IaC-TF.yml
@@ -9,7 +9,11 @@ on:
 
 env:
   APP_NAME: IaC-TF
+  ENV_NAME: "poc"
   AZURE_RG_LOCATION: centralus
+  TF_STORAGE_RG: "poc-shared-tfstate"
+  TF_STORAGE_ACCT: "poceusastfstate"
+  PR_NUMBER: ${{ github.event.number }}
     
 jobs:
   deploy-Terraform:
@@ -19,6 +23,33 @@ jobs:
         working-directory: ./deploy/terraform
     steps:
     - uses: actions/checkout@v2
+
+
+      # extract branch name from inputs
+    - name: Extract branch name from inputs
+      if: github.event_name == 'pull_request'
+      shell: bash
+      run: |
+        echo "ENV_NAME=$(echo pr${{ env.PR_NUMBER }})" >> $GITHUB_ENV
+
+
+    # Replace Tokens #{ENV_NAME}#: Set TF State Key = Branch name, #{SHORT_SHA}# for tags
+    - name: Replace tokens
+      uses: cschleiden/replace-tokens@v1.0
+      with:
+        files: '["**/*.tf", "**/*.tfvars"]' 
+
+    # print Environment
+    - name: Print Environment
+      run: |
+        pwd
+        ls -la
+        echo '*** Workflow ENV ***'
+        echo 'APP_NAME:' $APP_NAME
+        echo 'ENV_NAME:' $ENV_NAME
+        cat backend.tf
+        cat backend.actions.tfvars
+        cat params.actions.tfvars
 
       # Deploy Infrastructure
     - uses: azure/login@v1
@@ -40,8 +71,8 @@ jobs:
         terraform_version: ${{ env.tf_version }}
 
     - name: Init TF
-      run: terraform init -var-file ./params.bnk.tfvars
+      run: terraform init -var-file ./params.actions.tfvars -backend-config="backend.actions.tfvars"
 
     - name: TF Apply
-      run: terraform apply -auto-approve -var-file ./params.bnk.tfvars
+      run: terraform apply -auto-approve -var-file ./params.actions.tfvars
 
